--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     kapt 'com.android.databinding:compiler:3.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
+    implementation 'com.google.android.material:material:1.1.0'
 }
